--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -9,9 +9,9 @@
     <table class="table table-hover table-striped">
         <thead>
 			<tr>
-				<th>Title</th>
-				<th>Price</th>
-				<th>Category</th>
+				<th>@Html.DisplayNameFor(m => m.Title)</th>
+				<th>@Html.DisplayNameFor(m => m.Price)</th>
+				<th>@Html.DisplayNameFor(m => m.Category)</th>
 				<th></th>
 			</tr>
         </thead>
