--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -5,6 +5,12 @@
 
 <h1>Product Catalog</h1>
 
+<p>
+	@TempData["Message"]
+</p>
+
+<a asp-action="Add">Add Product</a>
+
 <div class="table-responsive">
     <table class="table table-hover table-striped">
         <thead>
