Styled Add Product form

--- a/Views/Product/Add.cshtml
+++ b/Views/Product/Add.cshtml
@@ -6,20 +6,24 @@
 <h1>Add Product</h1>
 
 <form method="post">
-	<label asp-for="Title"></label>
-	<input asp-for="Title" />
-	<span asp-validation-for="Title"></span>
-	<br />
+	<div class="form-row">
+		<div class="col-md-5">
+			<label asp-for="Title"></label>
+			<input asp-for="Title" class="form-control" />
+			<span asp-validation-for="Title"></span>
+			<br />
 
-	<label asp-for="Price"></label>
-	<input asp-for="Price" />
-	<span asp-validation-for="Price"></span>
-	<br />
+			<label asp-for="Price"></label>
+			<input asp-for="Price" class="form-control" />
+			<span asp-validation-for="Price"></span>
+			<br />
 
-	<label asp-for="Category"></label>
-	<input asp-for="Category" />
-	<span asp-validation-for="Category"></span>
-	<br />
+			<label asp-for="Category"></label>
+			<input asp-for="Category" class="form-control" />
+			<span asp-validation-for="Category"></span>
+			<br />
 
-	<input type="submit" />
+			<input type="submit" class="btn btn-outline-primary"/>
+		</div>
+	</div>
 </form>
