--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,22 +1,34 @@
 ﻿@model IEnumerable<Product>
 @{
-    ViewData["Title"] = "Product Catalog";
+	ViewData["Title"] = "Product Catalog";
 }
 
 <h1>Product Catalog</h1>
 
+@if (TempData["Message"] != null)
+{
+	<div class="alert alert-success alert-dismissible fade show" role="alert">
+		@TempData["Message"]
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		</button>
+	</div>
+}
+
+<a asp-action="Add">Add Product</a>
+
 <div class="table-responsive">
-    <table class="table table-hover table-striped">
-        <thead>
+	<table class="table table-hover table-striped">
+		<thead>
 			<tr>
 				<th>@Html.DisplayNameFor(m => m.Title)</th>
 				<th>@Html.DisplayNameFor(m => m.Price)</th>
 				<th>@Html.DisplayNameFor(m => m.Category)</th>
 				<th></th>
 			</tr>
-        </thead>
+		</thead>
 		<tbody>
-			@foreach(Product p in Model)
+			@foreach (Product p in Model)
 			{
 				<tr>
 					<td>@p.Title</td>
@@ -29,5 +41,5 @@
 				</tr>
 			}
 		</tbody>
-    </table>
+	</table>
 </div>
