Edit product implemented

--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -35,7 +35,7 @@
 					<td>@Html.DisplayFor(m => p.Price)</td>
 					<td>@p.Category</td>
 					<td>
-						<a class="btn btn-secondary" href="">Edit</a>
+						<a class="btn btn-secondary" asp-action="Edit" asp-route-id="@p.ProductId">Edit</a>
 						<a class="btn btn-danger" href="">Delete</a>
 					</td>
 				</tr>
