--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -36,7 +36,7 @@
 					<td>@p.Category</td>
 					<td>
 						<a class="btn btn-secondary" asp-action="Edit" asp-route-id="@p.ProductId">Edit</a>
-						<a class="btn btn-danger" href="">Delete</a>
+						<a class="btn btn-danger" asp-action="Delete" asp-route-id="@p.ProductId">Delete</a>
 					</td>
 				</tr>
 			}
