--- a/Views/Product/Delete.cshtml
+++ b/Views/Product/Delete.cshtml
@@ -38,7 +38,8 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @*<input type="hidden" asp-for="ProductId" />*@
+        <input type="submit" value="Delete" class="btn btn-danger" /> | 
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
