Added greeting to navigation if user is logged in

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿
+@inject IHttpContextAccessor sessionData
+@{
+	int? userId = sessionData.HttpContext.Session.GetInt32("UserId");
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -27,12 +32,22 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Catalog</a>
 						</li>
+						@if (!userId.HasValue)
+						{
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
 						</li>
+
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
 						</li>
+						}
+						else
+						{
+                            <li class="nav-item">
+                                <a class="nav-link text-dark disabled">Welcome back!</a>
+                            </li>
+						}
 					</ul>
                 </div>
             </div>
