Issue#25 user login (#30)
* Created login page

* Added login error message for invalid credentials

* Enable sessions

* Added session management for a login page

* Registered HttpContext service to access session in layout page

* Added greeting to navigation if user is logged in

* Added username greeting to navigation when logged in

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,28 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.EntityFrameworkCore 
+@inject IHttpContextAccessor sessionData
+@inject eCommerceSite.Data.ProductContext db
+@{
+	int? userId = sessionData.HttpContext.Session.GetInt32("UserId");
+	string username = null;
+	if (userId.HasValue )
+	{
+		string userNameFromSession = sessionData.HttpContext.Session.GetString("Username");
+		if (userNameFromSession == null)
+		{
+			username = await db.UserAccounts
+						   .Where(u => u.UserId == userId)
+						   .Select(u => u.Username)
+						   .SingleOrDefaultAsync();
+			sessionData.HttpContext.Session.SetString("Username", username);
+		}
+		else
+		{
+			username = userNameFromSession;
+		}
+
+	}
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -17,20 +41,33 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Catalog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
-                        </li>
-                    </ul>
+					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Catalog</a>
+						</li>
+						@if (!userId.HasValue)
+						{
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
+						</li>
+						}
+						else
+						{
+                            <li class="nav-item">
+                                <a class="nav-link text-dark disabled">Welcome @username!</a>
+                            </li>
+						}
+					</ul>
                 </div>
             </div>
         </nav>
