--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,6 +66,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark disabled">Welcome @username!</a>
                             </li>
+							<li class="nav-item">
+								<a class="nav-link text-dark" asp-controller="User" asp-action="Logout">Log Out</a>
+							</li>
 						}
 					</ul>
                 </div>
