Add shopping cart link to nav and add to cart button for each product

--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -37,6 +37,7 @@
 					<td>
 						<a class="btn btn-secondary" asp-action="Edit" asp-route-id="@p.ProductId">Edit</a>
 						<a class="btn btn-danger" asp-action="Delete" asp-route-id="@p.ProductId">Delete</a>
+						<a class="btn btn-primary" asp-controller="Cart" asp-action="Add" asp-route-id="@p.ProductId">Add to Cart</a>
 					</td>
 				</tr>
 			}
