--- a/Views/Cart/Summary.cshtml
+++ b/Views/Cart/Summary.cshtml
@@ -6,6 +6,12 @@
 
 <h1>Summary</h1>
 
+@if (Model.Count() == 0)
+{
+    <h2>Your shopping cart is empty</h2>
+}
+else
+{
 <table class="table">
     <thead>
         <tr>
@@ -25,7 +31,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductId)
@@ -45,3 +52,4 @@
 }
     </tbody>
 </table>
+}
